--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -9,14 +9,15 @@
 html,
 body {
     width: 100%;
-    height: 100%
+    height: 100%;
+    overflow: hidden;
 }
 
 .box {
     width: 100%;
     height: 100%;
-    display: flex;
     overflow: hidden;
+    display: flex;
     flex-direction: column;
     background: #f8f8f8;
 }
@@ -25,10 +26,11 @@ header {
     width: 100%;
     padding-left: 10px;
     flex-shrink: 0;
-    height: 180px;
+    height: 220px;
     h2 {
         text-align: center;
-        line-height: 30px;
+        line-height: 50px;
+        font-size: 30px;
     }
 }
 
@@ -56,7 +58,7 @@ header {
                         p {
                             width: 100%;
                             height: 30px;
-                            font-size: 14px;
+                            font-size: 20px;
                             color: #ccc;
                             line-height: 30px;
                             background: #fff;
@@ -73,4 +75,47 @@ header {
 section {
     flex: 1;
     overflow: hidden;
+    >h2 {
+        height: 50px;
+        line-height: 50px;
+        text-align: center;
+        font-size: 30px;
+    }
+    .content {
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        ul {
+            width: 100%;
+            li {
+                width: 100%;
+                height: 130px;
+                display: flex;
+                padding: 0 20px;
+                margin: 10px 0;
+                .right {
+                    width: 100px;
+                    margin-left: 10px;
+                    img {
+                        width: 100%
+                    }
+                }
+                .left {
+                    flex: 1;
+                    h2 {
+                        font-size: 30px;
+                    }
+                    p {
+                        font-size: 20px;
+                        color: #ccc;
+                        line-height: 50px;
+                    }
+                    span {
+                        font-size: 18px;
+                        color: #ccc;
+                    }
+                }
+            }
+        }
+    }
 }
